# notebooklm-mcp

./: .env.example  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml  server.py
scripts/: import_chrome_cookies.py  login_interactive.py
