[project]
name = "notebooklm-mcp"
version = "1.0.0"
description = "MCP server bridging Google NotebookLM with Claude Code/Desktop, Cursor, Cline, Continue. Cookies-from-Chrome bypass, auto-refresh, 27 tools."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Łukasz Hodorowicz"}]
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastmcp>=2.14.4",
    "notebooklm-py[browser]>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/studiogo/notebooklm-mcp"
Issues = "https://github.com/studiogo/notebooklm-mcp/issues"
