[project]
name = "notebooklm-mcp"
version = "1.1.0"
description = "MCP server bridging Google NotebookLM with Claude Code/Desktop, Cursor, Cline, Continue. Cross-platform auth (macOS/Windows/Linux), auto-refresh, 27 tools."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Łukasz Hodorowicz"}]
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastmcp>=2.14.4",
    "notebooklm-py[browser]>=0.3.4",
]

[project.optional-dependencies]
# Playwright headless login — wymagane na Windows/Linux (gdzie cookies-from-Chrome zawodzi).
# Instalacja: `uv sync --extra playwright && uv run playwright install chromium`
playwright = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/studiogo/notebooklm-mcp"
Issues = "https://github.com/studiogo/notebooklm-mcp/issues"
